Fix ka-tabs overflow-x

--- a/elements/ka-tabs/ka-tabs.sass
+++ b/elements/ka-tabs/ka-tabs.sass
@@ -84,7 +84,8 @@ ka-tabs
     left: 0
     bottom: 0
     display: block
-    overflow: auto
+    overflow-x: hidden
+    overflow-y: auto
     opacity: 0
     &.previous
       left: -100%
